--- a/invoice.css
+++ b/invoice.css
@@ -36,7 +36,7 @@ body{
     justify-content: center;
     width: 100%;
     height: 110vh;
-    margin-right: 300px;
+/*     margin-right: 00px; */
     margin-top: -15px;
 }
 
